src/test/resources/30/single/xhtml/invalid/entities-missing-semicolon.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
    <head>
        <title>Test</title>
    </head>
    <body>
        <!-- this entity reference is missing the final semicolon -->
        &amp 
    </body>
</html>
